--- a/TechnicalSafetyApplication/TechnicalSafetyApplication.csproj
+++ b/TechnicalSafetyApplication/TechnicalSafetyApplication.csproj
@@ -6,6 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+	<DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\Repositories\" />
+    <Folder Include="Models\Interfaces\" />
   </ItemGroup>
 
 </Project>
