Added admin rights for applicattion in Start
 - so, we need an access a service with a limited scope through the IApplicationBuilder.ApplicationServices, we have to disable scope checking in the Program.cs
""
- Thankfully app(db)settings.json we created a new user "Admin" with corresponding role

--- a/TechnicalSafetyApplication/appdbsettings.json
+++ b/TechnicalSafetyApplication/appdbsettings.json
@@ -1,4 +1,21 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+
+  "Data": {
+    "AdminUser": {
+      "Name": "Admin",
+      "Email": "admin@example.com",
+      "Password": "password123",
+      "Role": "Admins"
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TechnicalSafetyDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
