--- a/TechnicalSafetyApplication/appsettings.json
+++ b/TechnicalSafetyApplication/appsettings.json
@@ -6,5 +6,18 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Data": {
+    "AdminUser": {
+      "Name": "Admin",
+      "Email": "admin@example.com",
+      "Password": "password123",
+      "Role": "Admins"
+    }
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TechnicalSafetyDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
