--- a/TechnicalSafetyApplication/TechnicalSafetyApplication.csproj
+++ b/TechnicalSafetyApplication/TechnicalSafetyApplication.csproj
@@ -12,6 +12,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200531221933_ApplicationReplacing.cs" />
+    <Compile Remove="Migrations\20200531221933_ApplicationReplacing.Designer.cs" />
+    <Compile Remove="Migrations\20200601001813_bla.cs" />
+    <Compile Remove="Migrations\20200601001813_bla.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4">
@@ -30,6 +37,7 @@
 
   <ItemGroup>
     <Folder Include="Models\Interfaces\" />
+    <Folder Include="wwwroot\image\" />
   </ItemGroup>
 
 </Project>
